# mscbdecomp

./: .gitlab-ci.yml  AdjointTest.f90  CMakeLists.txt  Exponentials.F90  FullExp_test.f90  GeneralSingleColExp.F90  HomogeneousSingleColExp.F90  LICENSE  MvG_decomp.F90  Node.F90  README.md  SingleColExpBase.F90  SingleColExp_test.f90  TraceLessSingleColExp.F90  ZeroDiagSingleColExp.F90  colorvertex.F90  graphdata.F90  mscbdecomp.F90  vertex.F90
testsuite/: 1-ZeroDiag.F90  2-HomogeneousDiag.F90  3-TracelessDiag.F90  4-GeneralDiag.F90  5-EulerExponential.F90  6-FullExponential.F90  CMakeLists.txt
